objects/vlocity_ins__PromotionItem__c.object
<CustomObject>
    <description>Promotions can be identified as applicable to specific products or services or may automatically add certain products or services to a quote/order when the promotion is applied. This represents the product or service that is applicable or automatically included.</description>
    <fields>
        <fullName>vlocity_ins__ActionType__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Add/Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CardinalityCheckScope__c</fullName>
        <label>Cardinality Check Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Context Product Scope</fullName>
                </value>
                <value>
                    <fullName>Cart Scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContextEntityFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context Rule</label>
        <referenceTo>vlocity_ins__EntityFilter__c</referenceTo>
        <relationshipLabel>Promotion Items</relationshipLabel>
        <relationshipName>PromotionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContextProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Items (Context Product Id)</relationshipLabel>
        <relationshipName>ContextPromotionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsUndoable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Undoable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaxQuantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MinQuantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Items (Offer Product Id)</relationshipLabel>
        <relationshipName>OfferPromotionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductHierarchyPath__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Items</relationshipLabel>
        <relationshipName>PromotionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipLabel>Promotion Items</relationshipLabel>
        <relationshipName>PromotionItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UndoableMessage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Undoable Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UpdateScope__c</fullName>
        <description>When the Action on a Promotion Item is update, the Update Scope defines the way the update happens to existing cart items. Update Item Only means the Promotion Item adjustments are only applied to the specified item, not to its child items. Update Item and Child Items means the Promotion Item adjustments are applied to this item and its child items. Using Update Item Only allows adjusting the child items under the Promotion Item when the Action is Add, but not applying those child item adjustments when the Action is update.</description>
        <label>Update Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Update Item Only</fullName>
                    <default>true</default>
                    <label>Update Item Only</label>
                </value>
                <value>
                    <fullName>Update Item and Child Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion Item</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotion Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__Default_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__Quantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_ins__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Default_greater_than_Min</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MinQuantity__c  &gt;  vlocity_ins__Quantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity must be greater than or equal to Min Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Default_less_than_Max</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__Quantity__c  &gt;  vlocity_ins__MaxQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity must be less than or equal to Max Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Max_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MaxQuantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_ins__MaxQuantity__c</errorDisplayField>
        <errorMessage>Max Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Max_less_than_Min</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MaxQuantity__c  &lt;  vlocity_ins__MinQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__MaxQuantity__c</errorDisplayField>
        <errorMessage>Max Quantity must be greater than or equal to Min Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Min_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MinQuantity__c  &lt;  0</errorConditionFormula>
        <errorDisplayField>vlocity_ins__MinQuantity__c</errorDisplayField>
        <errorMessage>Min Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Min_greater_than_Max</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__MinQuantity__c  &gt;  vlocity_ins__MaxQuantity__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__MinQuantity__c</errorDisplayField>
        <errorMessage>Min Quantity must be less than or equal to Max Quantity</errorMessage>
    </validationRules>
</CustomObject>